Fixed accessibility and design spacing issue

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --clr-grayish-blue: hsl(220, 15%, 55%);
     --clr-dark-blue: hsl(218, 44%, 22%);
 
-    --fs-header: 1.375rem;
-    --fs-paragraph: 0.9375rem;
+    --fs-header: 1.375rem;      /* 22px */
+    --fs-paragraph: 0.9375rem;  /* 15px */
 
     --ff-standard: 'Outfit', sans-serif;
 }
@@ -112,7 +112,7 @@ body{
 .qr-code__text{
     display: grid;
     gap: 0.75rem;
-    margin: 0 1rem;
+    padding: 0 1rem;
 }
 
 .qr-code__heading{
